examples/bad/share_mut_arg.mko
fn bump(mut x: int) {
    x = x + 1
}

fn main() {
    let mut n = 1
    share let s = share_int(n)
    bump(n)
    share_drop(s)
}
